# c-backend/docs/swagger.json
@@ -70,6 +70,51 @@
                 }
             }
         },
+        "/api/user/signIn": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "SignIn",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.SignInReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.RestfulResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/signUp": {
             "post": {
                 "consumes": [
@@ -155,14 +200,35 @@
                 }
             }
         },
-        "user.UserCreateOrUpdateInfoReq": {
+        "user.SignInReq": {
             "type": "object",
             "required": [
-                "id",
-                "nickname",
-                "region",
-                "username"
+                "type"
             ],
+            "properties": {
+                "captcha": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string",
+                    "enum": [
+                        "email",
+                        "password"
+                    ]
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.UserCreateOrUpdateInfoReq": {
+            "type": "object",
             "properties": {
                 "avatarUrl": {
                     "type": "string"
@@ -170,7 +236,7 @@
                 "birthday": {
                     "type": "string"
                 },
-                "createTime": {
+                "email": {
                     "type": "string"
                 },
                 "gender": {
@@ -188,9 +254,6 @@
                 "region": {
                     "type": "string"
                 },
-                "updateTime": {
-                    "type": "string"
-                },
                 "username": {
                     "type": "string"
                 }
@@ -198,12 +261,6 @@
         },
         "user.UserSignUpAccountReq": {
             "type": "object",
-            "required": [
-                "captcha",
-                "email",
-                "password",
-                "username"
-            ],
             "properties": {
                 "captcha": {
                     "type": "string"
